adds woff2 font format to themes customized stylesheets

--- a/plugins/woocommerce/client/legacy/css/twenty-seventeen.scss
+++ b/plugins/woocommerce/client/legacy/css/twenty-seventeen.scss
@@ -12,9 +12,10 @@
 	src: url("../fonts/WooCommerce.eot");
 	src:
 		url("../fonts/WooCommerce.eot?#iefix") format("embedded-opentype"),
+		url("../fonts/WooCommerce.woff2") format('woff2'),
 		url("../fonts/WooCommerce.woff") format("woff"),
 		url("../fonts/WooCommerce.ttf") format("truetype"),
-		url("../fonts/WooCommerce.svg#star") format("svg");
+		url("../fonts/WooCommerce.svg#WooCommerce") format("svg");
 	font-weight: normal;
 	font-style: normal;
 }
@@ -24,6 +25,7 @@
 	src: url("../fonts/WooCommerce.eot");
 	src:
 		url("../fonts/WooCommerce.eot?#iefix") format("embedded-opentype"),
+		url("../fonts/WooCommerce.woff2") format('woff2'),
 		url("../fonts/WooCommerce.woff") format("woff"),
 		url("../fonts/WooCommerce.ttf") format("truetype"),
 		url("../fonts/WooCommerce.svg#WooCommerce") format("svg");
