--- a/plugins/woocommerce/client/legacy/css/twenty-nineteen.scss
+++ b/plugins/woocommerce/client/legacy/css/twenty-nineteen.scss
@@ -17,9 +17,10 @@ $highlights-color: #0073aa;
 	font-family: 'star';
 	src: url('../fonts/WooCommerce.eot');
 	src: url('../fonts/WooCommerce.eot?#iefix') format('embedded-opentype'),
+		url('../fonts/WooCommerce.woff2') format('woff2'),
 		url('../fonts/WooCommerce.woff') format('woff'),
 		url('../fonts/WooCommerce.ttf') format('truetype'),
-		url('../fonts/WooCommerce.svg#star') format('svg');
+		url('../fonts/WooCommerce.svg#WooCommerce') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -28,6 +29,7 @@ $highlights-color: #0073aa;
 	font-family: 'WooCommerce';
 	src: url('../fonts/WooCommerce.eot');
 	src: url('../fonts/WooCommerce.eot?#iefix') format('embedded-opentype'),
+		url('../fonts/WooCommerce.woff2') format('woff2'),
 		url('../fonts/WooCommerce.woff') format('woff'),
 		url('../fonts/WooCommerce.ttf') format('truetype'),
 		url('../fonts/WooCommerce.svg#WooCommerce') format('svg');
