--- a/plugins/woocommerce/client/legacy/css/twenty-twenty-one.scss
+++ b/plugins/woocommerce/client/legacy/css/twenty-twenty-one.scss
@@ -18,9 +18,10 @@ $highlights-color: #88a171;
 	src: url(../fonts/WooCommerce.eot);
 	src:
 		url(../fonts/WooCommerce.eot?#iefix) format("embedded-opentype"),
+		url(../fonts/WooCommerce.woff2) format('woff2'),
 		url(../fonts/WooCommerce.woff) format("woff"),
 		url(../fonts/WooCommerce.ttf) format("truetype"),
-		url(../fonts/WooCommerce.svg#star) format("svg");
+		url(../fonts/WooCommerce.svg#WooCommerce) format("svg");
 	font-weight: 400;
 	font-style: normal;
 }
@@ -30,6 +31,7 @@ $highlights-color: #88a171;
 	src: url(../fonts/WooCommerce.eot);
 	src:
 		url(../fonts/WooCommerce.eot?#iefix) format("embedded-opentype"),
+		url(../fonts/WooCommerce.woff2) format('woff2'),
 		url(../fonts/WooCommerce.woff) format("woff"),
 		url(../fonts/WooCommerce.ttf) format("truetype"),
 		url(../fonts/WooCommerce.svg#WooCommerce) format("svg");
