--- a/plugins/woocommerce/client/legacy/css/twenty-twenty-two.scss
+++ b/plugins/woocommerce/client/legacy/css/twenty-twenty-two.scss
@@ -6,9 +6,10 @@
 	src: url(../fonts/WooCommerce.eot);
 	src:
 		url(../fonts/WooCommerce.eot?#iefix) format("embedded-opentype"),
+		url(../fonts/WooCommerce.woff2) format('woff2'),
 		url(../fonts/WooCommerce.woff) format("woff"),
 		url(../fonts/WooCommerce.ttf) format("truetype"),
-		url(../fonts/WooCommerce.svg#star) format("svg");
+		url(../fonts/WooCommerce.svg#WooCommerce) format("svg");
 	font-weight: 400;
 	font-style: normal;
 }
@@ -18,6 +19,7 @@
 	src: url(../fonts/WooCommerce.eot);
 	src:
 		url(../fonts/WooCommerce.eot?#iefix) format("embedded-opentype"),
+		url(../fonts/WooCommerce.woff2) format('woff2'),
 		url(../fonts/WooCommerce.woff) format("woff"),
 		url(../fonts/WooCommerce.ttf) format("truetype"),
 		url(../fonts/WooCommerce.svg#WooCommerce) format("svg");
