--- a/plugins/woocommerce/client/legacy/css/twenty-twenty.scss
+++ b/plugins/woocommerce/client/legacy/css/twenty-twenty.scss
@@ -20,9 +20,10 @@ $highlights-color: #cd2653;
 	src: url(../fonts/WooCommerce.eot);
 	src:
 		url(../fonts/WooCommerce.eot?#iefix) format("embedded-opentype"),
+		url(../fonts/WooCommerce.woff2) format('woff2'),
 		url(../fonts/WooCommerce.woff) format("woff"),
 		url(../fonts/WooCommerce.ttf) format("truetype"),
-		url(../fonts/WooCommerce.svg#star) format("svg");
+		url(../fonts/WooCommerce.svg#WooCommerce) format("svg");
 	font-weight: 400;
 	font-style: normal;
 }
@@ -30,6 +31,9 @@ $highlights-color: #cd2653;
 @font-face {
 	font-family: WooCommerce;
 	src: url(../fonts/WooCommerce.eot);
+	src:
+		url(../fonts/WooCommerce.eot?#iefix) format("embedded-opentype"),
+		url(../fonts/WooCommerce.woff2) format('woff2'),
 	src: url(../fonts/WooCommerce.eot?#iefix) format("embedded-opentype"),
 		url(../fonts/WooCommerce.woff) format("woff"),
 		url(../fonts/WooCommerce.ttf) format("truetype"),
