Add subsection block component

--- a/packages/js/product-editor/src/blocks/style.scss
+++ b/packages/js/product-editor/src/blocks/style.scss
@@ -12,6 +12,7 @@
 @import "product-fields/sale-price/editor.scss";
 @import "product-fields/schedule-sale/editor.scss";
 @import "generic/section/editor.scss";
+@import "generic/subsection/editor.scss";
 @import "product-fields/shipping-dimensions/editor.scss";
 @import "product-fields/summary/editor.scss";
 @import "generic/tab/editor.scss";
