--- a/packages/js/product-editor/src/components/block-editor/style.scss
+++ b/packages/js/product-editor/src/components/block-editor/style.scss
@@ -160,6 +160,44 @@
 	}
 }
 
+.woocommerce-product-block-editor {
+	.block-editor-block-list__layout.is-root-container.is-loading {
+		.wp-block-woocommerce-product-section__heading-title {
+			@include placeholder();
+			background-color: $gray-200;
+			border-radius: $grid-unit-05;
+			width: 300px;
+			height: 28px;
+			margin-bottom: $gap-smaller;
+		}
+
+		.woocommerce-product-form-label__label {
+			@include placeholder();
+			background-color: $gray-200;
+			border-radius: $grid-unit-05;
+			width: $grid-unit-80;
+			height: 28px;
+			margin-bottom: $gap-smaller;
+		}
+
+		.woocommerce-product-form-input {
+			@include placeholder();
+			background-color: $gray-200;
+			border-radius: $grid-unit-05;
+			width: 100%;
+			height: 36px;
+		}
+
+		.woocommerce-product-form-textarea {
+			@include placeholder();
+			background-color: $gray-200;
+			border-radius: $grid-unit-05;
+			width: 100%;
+			height: 108px;
+		}
+	}
+}
+
 .wp-admin.woocommerce-feature-enabled-product-block-editor {
 	.components-modal {
 		&__frame {
