--- a/plugins/woocommerce/client/legacy/css/woocommerce.scss
+++ b/plugins/woocommerce/client/legacy/css/woocommerce.scss
@@ -1460,7 +1460,7 @@ p.demo_store,
 			font-weight: bold;
 			padding: 1rem;
 			box-sizing: border-box;
-			margin: 0;
+			margin: 0 !important;
 
 			&::after {
 				display: none;
@@ -1475,8 +1475,8 @@ p.demo_store,
 			border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 			padding: 1rem;
 			box-sizing: border-box;
-			margin: 0;
 			text-align: right;
+			margin: 0 !important;
 
 			&:last-of-type {
 				border-bottom: 0;
@@ -1500,6 +1500,7 @@ p.demo_store,
 			width: 100%;
 			border-radius: 5px;
 			padding: 6px 12px;
+			box-sizing: border-box;
 		}
 
 		.woocommerce-customer-details--phone,
