extend core/paragraph with text-area-features

--- a/packages/js/product-editor/src/blocks/generic/text-area/editor.scss
+++ b/packages/js/product-editor/src/blocks/generic/text-area/editor.scss
@@ -1,5 +1,5 @@
 .wp-block-woocommerce-product-text-area-field {	
-	.rich-text {
+	&.rich-text {
 		width: 100%;
 		min-height: calc($gap-larger * 3);
 		background-color: $white;
