use text-area with templates

--- a/packages/js/product-editor/src/blocks/generic/text-area/editor.scss
+++ b/packages/js/product-editor/src/blocks/generic/text-area/editor.scss
@@ -1,5 +1,6 @@
 .wp-block-woocommerce-product-text-area-field {	
-	&.rich-text {
+	.rich-text, // text-area :clap:
+	&.rich-text { // and core/paragraph calc( :clap * 100 )
 		width: 100%;
 		min-height: calc($gap-larger * 3);
 		background-color: $white;
