--- a/plugins/woocommerce-blocks/assets/js/blocks/product-gallery/style.scss
+++ b/plugins/woocommerce-blocks/assets/js/blocks/product-gallery/style.scss
@@ -145,6 +145,7 @@ $admin-bar-mobile-height: 46px;
 		margin-right: auto;
 		margin-left: auto;
 		max-width: $outside-image-max-width;
+		padding: 5px;
 	}
 
 	.wc-block-product-gallery-large-image__container {
@@ -175,6 +176,7 @@ $admin-bar-mobile-height: 46px;
 		overflow: hidden;
 		margin-right: auto;
 		margin-left: auto;
+		padding: 5px;
 	}
 
 
@@ -201,9 +203,11 @@ $admin-bar-mobile-height: 46px;
 		display: flex;
 		flex-direction: column;
 		position: absolute;
-		width: 100%;
-		height: 100%;
-		top: 0;
+		width: calc(100% - 10px);
+		height: calc(100% - 10px);
+		top: 5px;
+		left: 5px;
+
 
 		// Reset the margin of the inner blocks when the Next/Previous buttons are outside the image.
 		#{$gallery-next-previous-outside-image} & > * {
