--- a/packages/js/product-editor/src/blocks/generic/text-area/editor.scss
+++ b/packages/js/product-editor/src/blocks/generic/text-area/editor.scss
@@ -1,10 +1,11 @@
 .wp-block-woocommerce-product-text-area-field {	
-	.rich-text {
+	.rich-text, // text-area :clap:
+	&.rich-text { // and core/paragraph calc( :clap * 100 )
 		width: 100%;
-		min-height: calc( $gap-larger * 3 );
+		min-height: calc($gap-larger * 3);
 		background-color: $white;
 		box-sizing: border-box;
-		border: 1px solid $gray-700;
+		border: 1px solid #757575;
 		border-radius: 2px;
 		padding: $gap-smaller;
 		margin: 0;
@@ -18,8 +19,8 @@
 		}
 	
 		&:focus {
-			box-shadow: inset 0 0 0 1px var( --wp-admin-theme-color-darker-10, --wp-admin-theme-color );
-			border-color: var( --wp-admin-theme-color-darker-10, --wp-admin-theme-color );
+			box-shadow: inset 0 0 0 1px var(--wp-admin-theme-color-darker-10, --wp-admin-theme-color);
+			border-color: var(--wp-admin-theme-color-darker-10, --wp-admin-theme-color);
 		}
 	}
 	
