--- a/plugins/woocommerce/templates/product-editor/parts/simple-form.html
+++ b/plugins/woocommerce/templates/product-editor/parts/simple-form.html
@@ -1,5 +1,7 @@
-<!-- wp:group {"tagName":"main","layout":{"type":"constrained"}} -->
-<main class="wp-block-group">
-	<!-- wp:woocommerce/product-name-field /-->
-</main>
-<!-- /wp:group -->
+<!-- wp:woocommerce/product-tab {"id":"general","title":"General"} -->
+	<!-- wp:woocommerce/product-section {"id":"basic-details","title":"Basic details"} -->
+		<!-- wp:woocommerce/product-name-field /-->
+	<!-- /wp:woocommerce/product-section -->
+<!-- /wp:woocommerce/product-tab -->
+<!-- wp:woocommerce/product-tab {"id":"pricing","title":"Pricing"} -->
+<!-- /wp:woocommerce/product-tab -->
