--- a/plugins/woocommerce-blocks/assets/js/blocks/product-gallery/style.scss
+++ b/plugins/woocommerce-blocks/assets/js/blocks/product-gallery/style.scss
@@ -13,28 +13,25 @@ $thumbnails-gap: 15px;
 $default-number-of-thumbnails: 3;
 $dialog-header-height: 29px;
 $dialog-header-padding-top: calc(30px / 2);
+$dialog-padding: 16px;
 $admin-bar-desktop-height: 32px;
 $admin-bar-mobile-height: 46px;
 
 // Product Gallery
 #{$gallery} {
-	.wc-block-product-gallery-dialog__overlay {
-		height: 100vh;
-		width: 100vw;
-		position: fixed;
-		top: 0;
-		left: 0;
-		background-color: #808080;
-		z-index: 9999;
-	}
-
 	dialog {
+		&.wc-block-product-gallery--dialog-open {
+			display: flex;
+		}
+
+		flex-direction: column;
 		position: fixed;
 		border: none;
 		top: 0;
 		z-index: 9999;
-		padding-top: 0;
+		padding: $dialog-padding;
 		height: 100vh;
+		width: calc(100vw - 2 * ($dialog-padding));
 
 		.admin-bar & {
 			margin-top: $admin-bar-desktop-height;
@@ -50,6 +47,10 @@ $admin-bar-mobile-height: 46px;
 
 		.wc-block-product-gallery-dialog__header {
 			padding-top: $dialog-header-padding-top;
+		}
+
+		.wc-block-product-gallery-dialog__body {
+			align-self: center;
 		}
 
 		.wc-block-product-galler-dialog__header-right {
