--- a/plugins/woocommerce-admin/client/customize-store/assembler-hub/style.scss
+++ b/plugins/woocommerce-admin/client/customize-store/assembler-hub/style.scss
@@ -476,6 +476,20 @@
 		}
 	}
 
+	.woocommerce-customize-store_sidebar-typography-upgrade-notice {
+		margin-top: 48px;
+		color: #1E1E1E;
+		font-size: 11px;
+		padding: 0;
+		h4 {
+			text-transform: uppercase;
+			margin-bottom: 4px;
+		}
+		p {
+			margin: 0;
+		}
+	}
+
 	/* Layout sidebar */
 	.block-editor-block-patterns-list__item {
 		.auto-block-preview__container,
