Add the CSS for the woocommerce-customize-store__opt-in-usage-tracking-modal

--- a/plugins/woocommerce-admin/client/customize-store/style.scss
+++ b/plugins/woocommerce-admin/client/customize-store/style.scss
@@ -180,7 +180,8 @@ body.woocommerce-customize-store.js.is-fullscreen-mode {
 }
 
 .woocommerce-customize-store__onboarding-welcome-modal,
-.woocommerce-customize-store__design-change-warning-modal {
+.woocommerce-customize-store__design-change-warning-modal,
+.woocommerce-customize-store__opt-in-usage-tracking-modal {
 	width: 480px;
 	max-width: 480px;
 
