Add product trait compatibility rules to blocks

--- a/plugins/woocommerce/templates/product-editor/parts/simple-form.html
+++ b/plugins/woocommerce/templates/product-editor/parts/simple-form.html
@@ -1,7 +1,10 @@
 <!-- wp:woocommerce/product-tab {"id":"general","title":"General"} -->
 	<!-- wp:woocommerce/product-section {"id":"basic-details","title":"Basic details"} -->
 		<!-- wp:woocommerce/product-name-field /-->
+		<!-- wp:woocommerce/product-checkbox-field {"title":"Virtual","label":"Virtual","property":"virtual","checkedValue":"yes"} /-->
 	<!-- /wp:woocommerce/product-section -->
 <!-- /wp:woocommerce/product-tab -->
 <!-- wp:woocommerce/product-tab {"id":"pricing","title":"Pricing"} -->
+<!-- /wp:woocommerce/product-tab -->
+<!-- wp:woocommerce/product-tab {"id":"shipping","title":"Shipping","metadata":{"productTrait":"shippable"}} -->
 <!-- /wp:woocommerce/product-tab -->
