Allow empty options for select field

--- a/plugins/woocommerce-blocks/assets/js/base/components/combobox/style.scss
+++ b/plugins/woocommerce-blocks/assets/js/base/components/combobox/style.scss
@@ -104,6 +104,12 @@
 					}
 				}
 
+				// Force empty rows to have a height.
+				&::after {
+					content: " ";
+					display: inline-block;
+				}
+
 				&:hover,
 				&:focus,
 				&.is-highlighted,
