--- a/plugins/woocommerce-admin/client/customize-store/style.scss
+++ b/plugins/woocommerce-admin/client/customize-store/style.scss
@@ -221,6 +221,26 @@ body.woocommerce-customize-store.js.is-fullscreen-mode {
 	}
 }
 
+.woocommerce-customize-store__opt-in-usage-tracking-modal {
+	.components-modal__header {
+		padding: 32px 32px 16px 32px;
+	}
+
+	.components-modal__content {
+		padding: 0;
+	}
+
+	.core-profiler__checkbox {
+		padding: 16px 32px 16px 32px;
+	}
+
+	.woocommerce-customize-store__design-change-warning-modal-footer {
+		border-top: 1px solid #ddd;
+		padding: 24px 32px 32px 32px;
+		width: 100%;
+	}
+}
+
 .woocommerce-onboarding-loader {
 	min-height: 100vh;
 	display: flex;
