--- a/plugins/woocommerce-admin/client/customize-store/style.scss
+++ b/plugins/woocommerce-admin/client/customize-store/style.scss
@@ -180,8 +180,7 @@ body.woocommerce-customize-store.js.is-fullscreen-mode {
 }
 
 .woocommerce-customize-store__onboarding-welcome-modal,
-.woocommerce-customize-store__design-change-warning-modal,
-.woocommerce-customize-store__opt-in-usage-tracking-modal {
+.woocommerce-customize-store__design-change-warning-modal {
 	width: 480px;
 	max-width: 480px;
 
@@ -222,6 +221,14 @@ body.woocommerce-customize-store.js.is-fullscreen-mode {
 }
 
 .woocommerce-customize-store__opt-in-usage-tracking-modal {
+	width: 480px;
+	max-width: 480px;
+
+	a {
+		text-decoration: underline;
+		color: inherit;
+	}
+
 	.components-modal__header {
 		padding: 32px 32px 16px 32px;
 	}
@@ -238,6 +245,9 @@ body.woocommerce-customize-store.js.is-fullscreen-mode {
 		border-top: 1px solid #ddd;
 		padding: 24px 32px 32px 32px;
 		width: 100%;
+		display: flex;
+		gap: 12px;
+		justify-content: flex-end;
 	}
 }
 
