--- a/plugins/woocommerce-admin/client/marketplace/components/notice/notice.scss
+++ b/plugins/woocommerce-admin/client/marketplace/components/notice/notice.scss
@@ -3,8 +3,8 @@
 .woocommerce-marketplace {
 	&__notice {
 		align-items: center;
-		border: 1px solid #F0F0F0;
-		box-shadow: 0px 2px 6px 0px #0000000D;
+		border: 1px solid #f0f0f0;
+		box-shadow: 0 2px 6px 0 #0000000d;
 		display: flex;
 		gap: 12px;
 		margin-bottom: 40px;
@@ -35,15 +35,15 @@
 			&.icon-color-info {
 				fill: var(--wp-admin-theme-color, #007cba);
 			}
-		
+
 			&.icon-color-error {
 				fill: $alert-red;
 			}
-		
+
 			&.icon-color-warning {
 				fill: $alert-yellow;
 			}
-		
+
 			&.icon-color-success {
 				fill: $valid-green;
 			}
