--- a/plugins/woocommerce-blocks/assets/js/blocks/product-collection/style.scss
+++ b/plugins/woocommerce-blocks/assets/js/blocks/product-collection/style.scss
@@ -9,7 +9,9 @@
 	max-width: 100vw;
 	height: 4px;
 	background-color: var(--wp--preset--color--primary, #000);
-	opacity: 0;
+	opacity: 0; // Hide the animation by default.
+	transform-origin: 0% 0%; // Start the animation from the left.
+	pointer-events: none; // Allows click events to pass through to elements underneath.
 
 	&.start-animation {
 		animation: wc-block-product-collection__pagination-start-animation 30s
@@ -25,12 +27,10 @@
 @keyframes wc-block-product-collection__pagination-start-animation {
 	0% {
 		transform: scaleX(0);
-		transform-origin: 0% 0%;
 		opacity: 1;
 	}
 	100% {
 		transform: scaleX(1);
-		transform-origin: 0% 0%;
 		opacity: 1;
 	}
 }
