--- a/plugins/woocommerce-blocks/assets/js/blocks/product-collection/style.scss
+++ b/plugins/woocommerce-blocks/assets/js/blocks/product-collection/style.scss
@@ -14,13 +14,11 @@
 	pointer-events: none; // Allows click events to pass through to elements underneath.
 
 	&.start-animation {
-		animation: wc-block-product-collection__pagination-start-animation 30s
-			cubic-bezier(0.03, 0.5, 0, 1) forwards;
+		animation: wc-block-product-collection__pagination-start-animation 30s cubic-bezier(0.03, 0.5, 0, 1) forwards;
 	}
 
 	&.finish-animation {
-		animation: wc-block-product-collection__pagination-finish-animation
-			300ms ease-in;
+		animation: wc-block-product-collection__pagination-finish-animation	300ms ease-in;
 	}
 }
 
