--- a/plugins/woocommerce-blocks/assets/js/blocks/product-filter/inner-blocks/active-filters/style.scss
+++ b/plugins/woocommerce-blocks/assets/js/blocks/product-filter/inner-blocks/active-filters/style.scss
@@ -1,4 +1,4 @@
-@import '../../../../../../packages/components/chip/style.scss';
+@import "../../../../../../packages/components/chip/style";
 
 .wp-block-woocommerce-product-filter-active {
 	margin-bottom: $gap-large;
