--- a/packages/js/product-editor/src/components/header/style.scss
+++ b/packages/js/product-editor/src/components/header/style.scss
@@ -7,7 +7,7 @@
 		padding: 0 $gap;
 		height: $header-height;
 
-		@include breakpoint( '<960px' ) {
+		@include breakpoint("<960px") {
 			grid-template-columns: auto 1fr;
 		}
 	}
@@ -23,13 +23,26 @@
 		overflow: hidden;
 		text-overflow: ellipsis;
 
-		@include breakpoint( '<960px' ) {
+		@include breakpoint("<960px") {
 			display: none;
 		}
 	}
 
 	&__actions {
 		margin-left: auto;
+
+		&-edit-schedule {
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+			align-items: flex-start;
+			gap: $grid-unit-05;
+
+			:last-child {
+				color: $gray-700;
+				font-size: 13px;
+			}
+		}
 	}
 
 	.woocommerce-product-header__actions {
@@ -42,8 +55,7 @@
 
 	.components-dropdown-menu__toggle {
 		&.is-opened {
-
-			background-color: #1E1E1E;
+			background-color: #1e1e1e;
 			color: #fff;
 		}
 	}
@@ -98,7 +110,6 @@
 				min-width: $icon-size;
 			}
 		}
-
 	}
 
 	.woocommerce-product-tabs {
@@ -120,5 +131,4 @@
 		min-width: auto;
 		width: min-content;
 	}
-
 }
