--- a/plugins/woocommerce-admin/client/marketplace/components/notice/notice.scss
+++ b/plugins/woocommerce-admin/client/marketplace/components/notice/notice.scss
@@ -7,7 +7,7 @@
 		box-shadow: 0 2px 6px 0 #0000000d;
 		display: flex;
 		gap: 12px;
-		margin-bottom: 40px;
+		margin-bottom: 32px;
 		opacity: 1;
 		padding: 12px;
 		transition: opacity 1s ease-out;
@@ -30,21 +30,20 @@
 
 		&-icon {
 			align-self: flex-start;
-			margin-top: 3px;
 
-			&.icon-color-info {
+			&--info {
 				fill: var(--wp-admin-theme-color, #007cba);
 			}
 
-			&.icon-color-error {
+			&--error {
 				fill: $alert-red;
 			}
 
-			&.icon-color-warning {
+			&--warning {
 				fill: $alert-yellow;
 			}
 
-			&.icon-color-success {
+			&--success {
 				fill: $valid-green;
 			}
 		}
@@ -72,9 +71,14 @@
 			gap: 8px;
 			line-height: 20px;
 			margin: 0;
+
+			.components-button {
+				margin-right: 12px;
+			}
 		}
 
 		&-close {
+			align-self: flex-start;
 			background: none;
 			border: none;
 			cursor: pointer;
