--- a/plugins/woocommerce-admin/client/customize-store/style.scss
+++ b/plugins/woocommerce-admin/client/customize-store/style.scss
@@ -180,7 +180,8 @@ body.woocommerce-customize-store.js.is-fullscreen-mode {
 }
 
 .woocommerce-customize-store__onboarding-welcome-modal,
-.woocommerce-customize-store__design-change-warning-modal {
+.woocommerce-customize-store__design-change-warning-modal,
+.woocommerce-customize-store__theme-switch-warning-modal {
 	width: 480px;
 	max-width: 480px;
 
@@ -213,7 +214,8 @@ body.woocommerce-customize-store.js.is-fullscreen-mode {
 		font-weight: 700;
 	}
 
-	.woocommerce-customize-store__design-change-warning-modal-footer {
+	.woocommerce-customize-store__design-change-warning-modal-footer,
+	.woocommerce-customize-store__theme-switch-warning-modal-footer {
 		display: flex;
 		gap: 12px;
 		justify-content: flex-end;
