Add phone input

--- a/plugins/woocommerce-blocks/assets/js/blocks/cart/style.scss
+++ b/plugins/woocommerce-blocks/assets/js/blocks/cart/style.scss
@@ -7,6 +7,7 @@
 
 	.wc-block-components-address-form {
 		.wc-block-components-text-input,
+		.wc-block-components-phone-input,
 		.wc-block-components-country-input,
 		.wc-block-components-state-input {
 			&:first-of-type {
