Use notice component instead of Card.

--- a/plugins/woocommerce-admin/client/marketplace/components/woo-connect-plugin/woo-connect-plugin.scss
+++ b/plugins/woocommerce-admin/client/marketplace/components/woo-connect-plugin/woo-connect-plugin.scss
@@ -31,6 +31,10 @@
 			align-items: center;
 			gap: $grid-unit-15;
 			padding: 0px;
+
+			.components-notice__buttons {
+				margin-top: 12px;
+			}
 		}
 	}
 
