--- a/plugins/woocommerce-blocks/assets/js/base/components/phone-input/style.scss
+++ b/plugins/woocommerce-blocks/assets/js/base/components/phone-input/style.scss
@@ -21,7 +21,7 @@
 		position: absolute;
 		transform: translateY(em($gap));
 		line-height: 1.25; // =20px when font-size is 16px.
-		left: 75px;
+		left: 85px;
 		top: 0;
 		transform-origin: top left;
 		color: $universal-body-low-emphasis;
@@ -53,7 +53,7 @@
 			font-size: inherit;
 			font-family: inherit;
 			outline: 0;
-			padding: em($gap);
+			padding: em($gap + $gap-smaller) em($gap-smaller) em($gap-smaller);
 			margin: 0;
 			color: $input-text-active;
 			background-color: #fff;
@@ -169,7 +169,7 @@
 	--select-search-font: "Inter", sans-serif;
 
 	width: 100%;
-	position: relative;
+	position: absolute;
 	font-family: var(--select-search-font);
 	color: var(--select-search-text);
 	box-sizing: border-box;
@@ -245,7 +245,7 @@
 	padding: 0 em($gap);
 	margin: 0;
 	background: var(--select-search-background);
-	border: 1px solid var(--select-search-border);
+	border: 2px solid rgba(17, 17, 17, 0.8);
 	border-bottom: 0;
 	color: var(--select-search-text);
 	border-radius: $universal-border-radius $universal-border-radius 0 0;
@@ -301,13 +301,13 @@
 .select-search-container:not(.select-search-is-multiple) .select-search-select {
 	position: absolute;
 	z-index: 2;
-	top: 54px;
+	top: 48px;
 	right: 0;
 	left: 0;
-	border-radius: 3px;
-	display: block;
-	border: 1px solid var(--select-search-border);
 	border-radius: 0 0 $universal-border-radius $universal-border-radius;
+	display: block;
+	border: 2px solid rgba(17, 17, 17, 0.8);
+	border-top: 0;
 }
 
 .select-search-options {
@@ -369,4 +369,9 @@
 
 .select-search-row:not(:last-child) .select-search-group-header {
 	margin-bottom: 10px;
+}
+
+
+.wc-block-components-address-form__phone {
+	position: relative;
 }
