Refactor rating, stock filter block e2e tests to use new dynamic templates.

--- a/plugins/woocommerce-blocks/tests/e2e/tests/filter-blocks/rating-filter.handlebars
+++ b/plugins/woocommerce-blocks/tests/e2e/tests/filter-blocks/rating-filter.handlebars
@@ -15,7 +15,7 @@
 	<h3 class="wp-block-heading">Filter by Rating</h3>
 	<!-- /wp:heading -->
 
-	<!-- wp:woocommerce/product-filter-rating {"lock":{"remove":true}} /-->
-	<!-- /wp:woocommerce/product-filter -->
+	{{#> wp-block blockName='woocommerce/product-filter-rating' attributes=attributes }}
+	{{/ wp-block }}
 </div>
 <!-- /wp:woocommerce/product-collection -->
