--- a/plugins/woocommerce-blocks/assets/js/base/components/phone-input/style.scss
+++ b/plugins/woocommerce-blocks/assets/js/base/components/phone-input/style.scss
@@ -23,7 +23,7 @@
 		position: absolute;
 		transform: translateY(em($gap));
 		line-height: 1.25; // =20px when font-size is 16px.
-		left: 99px;
+		left: 79px;
 		top: 0;
 		transform-origin: top left;
 		color: $universal-body-low-emphasis;
@@ -48,6 +48,7 @@
 		box-sizing: border-box;
 		min-height: 0;
 		display: flex;
+		border-radius: $universal-border-radius;
 
 		input {
 			background: none;
@@ -157,223 +158,46 @@
 }
 
 
-/**
- * Main wrapper
- */
-.select-search-container {
-	--select-search-background: #fff;
-	--select-search-border: $universal-border-strong;
-	--select-search-selected: #1e66f5;
-	--select-search-text: #000;
-	--select-search-subtle-text: #6c6f85;
-	--select-search-inverted-text: var(--select-search-background);
-	--select-search-highlight: #eff1f5;
-	--select-search-font: "Inter", sans-serif;
 
+// .wc-block-components-address-form__phone {
+// 	position: relative;
+// }
+
+.iti--allow-dropdown {
+	display: flex;
 	width: 100%;
-	position: absolute;
-	font-family: var(--select-search-font);
-	color: var(--select-search-text);
-	box-sizing: border-box;
-
-	&.select-search-is-focused {
-		height: auto;
-		overflow: visible;
-	}
-
-	input {
-		outline: 0;
-	}
 }
 
-.visually-hidden:not(:focus):not(:active) {
-	clip: rect(0 0 0 0);
-	clip-path: inset(50%);
-	height: 1px;
-	overflow: hidden;
-	position: absolute;
-	white-space: nowrap;
-	width: 1px;
+.iti--show-selected-dial-code .iti__selected-flag,
+.iti--allow-dropdown .iti__flag-container:hover .iti__selected-flag {
+	background-color: #fff;
+	outline: 0;
 }
 
-.select-search-container *,
-.select-search-container *::after,
-.select-search-container *::before {
-	box-sizing: inherit;
+.iti__selected-flag {
+	border-radius: $universal-border-radius 0 0 $universal-border-radius;
+	border: 0 !important;
+}
+
+.iti__tel-input {
+	flex: 1;
+	border: 1px solid rgba(17, 17, 17, 0.8) !important;
+	border-left: 1px solid rgba(17, 17, 17, 0.8);
+	border-radius: $universal-border-radius !important;
 }
 
 
-@supports (font-variation-settings: normal) {
-	.select-search-container {
-		--select-search-font: "Inter var", sans-serif;
-	}
+.iti--inline-dropdown .iti__dropdown-content {
+	box-shadow: none;
+	border-radius: $universal-border-radius;
 }
 
-// @media (prefers-color-scheme: dark) {
-// 	.select-search-container {
-// 		--select-search-background: #000;
-// 		--select-search-border: #313244;
-// 		--select-search-selected: #89b4fa;
-// 		--select-search-text: #fff;
-// 		--select-search-subtle-text: #a6adc8;
-// 		--select-search-highlight: #1e1e2e;
-// 	}
-// }
-
-// body.is-dark-mode .select-search-container {
-// 	--select-search-background: #000;
-// 	--select-search-border: #313244;
-// 	--select-search-selected: #89b4fa;
-// 	--select-search-text: #fff;
-// 	--select-search-subtle-text: #a6adc8;
-// 	--select-search-highlight: #1e1e2e;
-// }
-
-// body.is-light-mode .select-search-container {
-// 	--select-search-background: #fff;
-// 	--select-search-border: #dce0e8;
-// 	--select-search-selected: #1e66f5;
-// 	--select-search-text: #000;
-// 	--select-search-subtle-text: #6c6f85;
-// 	--select-search-highlight: #eff1f5;
-// }
-
-.select-search-input {
-	position: relative;
-	z-index: 1;
-	display: block;
-	height: 48px;
-	width: 100%;
-	padding: 0 em($gap);
-	margin: 0;
-	background: var(--select-search-background);
-	border: 2px solid rgba(17, 17, 17, 0.8);
-	border-bottom: 0;
-	color: var(--select-search-text);
-	border-radius: $universal-border-radius $universal-border-radius 0 0;
-	outline: 0 !important;
-	font-family: var(--select-search-font);
-	font-size: 16px;
-	text-align: left;
-	text-overflow: ellipsis;
-	line-height: 48px;
-	letter-spacing: 0.01rem;
-
-	&:focus {
-		outline: 0;
-	}
+.iti__search-input {
+	border: 0 !important;
+	border-radius: $universal-border-radius $universal-border-radius 0 0 !important;
+	padding: 16px 8px !important;
 }
 
-
-// .select-search-is-multiple .select-search-input {
-// 	margin-bottom: -2px;
-// }
-
-// .select-search-is-multiple .select-search-input {
-// 	border-radius: 3px 3px 0 0;
-// }
-
-.select-search-input::-webkit-search-decoration,
-.select-search-input::-webkit-search-cancel-button,
-.select-search-input::-webkit-search-results-button,
-.select-search-input::-webkit-search-results-decoration {
-	-webkit-appearance: none;
-}
-
-.select-search-input[readonly] {
-	cursor: pointer;
-}
-
-.select-search-is-disabled .select-search-input {
-	cursor: not-allowed;
-}
-
-// .select-search-container:not(.select-search-is-disabled).select-search-has-focus .select-search-input,
-// .select-search-container:not(.select-search-is-disabled) .select-search-input:hover {
-// 	border-color: var(--select-search-selected);
-// }
-
-.select-search-select {
-	background: var(--select-search-background);
-	// box-shadow: 0 0.0625rem 0.125rem rgba(0, 0, 0, 0.15);
-	overflow: auto;
-	max-height: 360px;
-}
-
-.select-search-container:not(.select-search-is-multiple) .select-search-select {
-	position: absolute;
-	z-index: 2;
-	top: 48px;
-	right: 0;
-	left: 0;
-	border-radius: 0 0 $universal-border-radius $universal-border-radius;
-	display: block;
-	border: 2px solid rgba(17, 17, 17, 0.8);
-	border-top: 0;
-}
-
-.select-search-options {
-	list-style: none outside;
-	margin: 0;
-	padding: 0;
-}
-.select-search-options li {
-	margin: 0;
-	padding: 0;
-}
-
-.select-search-option,
-.select-search-not-found {
-	display: block;
-	height: 42px;
-	width: 100%;
-	padding: 0 16px;
-	background: var(--select-search-background);
-	border: none;
-	outline: none;
-	font-family: var(--select-search-font);
-	color: var(--select-search-text);
-	font-size: 16px;
-	text-align: left;
-	letter-spacing: 0.01rem;
-	cursor: pointer;
-	-webkit-font-smoothing: antialiased;
-}
-
-.select-search-option:disabled {
-	opacity: 0.5;
-	cursor: not-allowed;
-	background: transparent !important;
-}
-
-.select-search-is-highlighted,
-.select-search-option:not(.select-search-is-selected):hover {
-	background: var(--select-search-highlight);
-}
-
-// .select-search-is-selected {
-// 	font-weight: bold;
-// 	color: var(--select-search-selected);
-// }
-
-.select-search-group-header {
-	font-size: 12px;
-	text-transform: uppercase;
-	background: var(--select-search-border);
-	color: var(--select-search-subtle-text);
-	letter-spacing: 0.1rem;
-	padding: 10px 16px;
-}
-
-.select-search-row:not(:first-child) .select-search-group-header {
-	margin-top: 10px;
-}
-
-.select-search-row:not(:last-child) .select-search-group-header {
-	margin-bottom: 10px;
-}
-
-
-.wc-block-components-address-form__phone {
-	position: relative;
+.iti__flag-container {
+	border: 0 !important;
 }
