--- a/plugins/woocommerce-admin/client/customize-store/intro/intro.scss
+++ b/plugins/woocommerce-admin/client/customize-store/intro/intro.scss
@@ -278,27 +278,36 @@
 			}
 		}
 
-		.theme-card__active {
-			border-radius: 100px;
-			background: rgba(56, 88, 233, 0.2);
-			padding: 5px 10px;
-			justify-content: flex-end;
-			align-items: center;
-			gap: 10px;
-			color: #1d35b4;
-			font-size: 12px;
-			font-style: normal;
-			font-weight: 500;
-			line-height: 20px; /* 166.667% */
-			margin-right: 10px;
-		}
-
 		.theme-card__free {
 			color: #1e1e1e;
 			font-size: 14px;
 			font-style: normal;
 			font-weight: 400;
 			line-height: 16px; /* 114.286% */
+		}
+
+		.theme-card__active {
+			background: rgba(56, 88, 233, 0.2);
+			color: #1d35b4;
+		}
+
+		.theme-card__paid {
+			background: #dcdcde;
+			color: #2c3338;
+		}
+
+		.theme-card__active,
+		.theme-card__paid {
+			border-radius: 100px;
+			padding: 5px 10px;
+			justify-content: flex-end;
+			align-items: center;
+			gap: 10px;
+			font-size: 12px;
+			font-style: normal;
+			font-weight: 500;
+			line-height: 20px; /* 166.667% */
+			margin-right: 10px;
 		}
 	}
 }
