[CYS] Update path to intro when exiting the assembler (#44771)
* Update path to intro when exiting the assembler

* Add changefile(s) from automation for the following project(s): woocommerce

* Fix styling

* Fix linting error

---------

Co-authored-by: github-actions <github-actions@github.com>

--- a/plugins/woocommerce-admin/client/customize-store/assembler-hub/style.scss
+++ b/plugins/woocommerce-admin/client/customize-store/assembler-hub/style.scss
@@ -59,7 +59,8 @@
 	}
 }
 
-.woocommerce-customize-store__step-assemblerHub {
+.woocommerce-customize-store__step-assemblerHub,
+.woocommerce-customize-store__step-intro {
 	a {
 		text-decoration: none;
 	}
