Update tasklist header style

--- a/plugins/woocommerce-admin/client/task-lists/setup-task-list/components/task-list-completed-header.scss
+++ b/plugins/woocommerce-admin/client/task-lists/setup-task-list/components/task-list-completed-header.scss
@@ -30,3 +30,7 @@ $ces-feedback-height: 64px;
 	padding-right: 16px;
 	padding-top: 9px; // align with header text
 }
+
+.woocommerce-task-header__contents-container.woocommerce-task-header__launch_your_store img.svg-background {
+	padding: 8px;
+}
