Introduce the new 'Design your own' button in the themes screen.

--- a/plugins/woocommerce-admin/client/marketplace/components/products/products.scss
+++ b/plugins/woocommerce-admin/client/marketplace/components/products/products.scss
@@ -7,3 +7,13 @@
 		margin-top: 24px;
 	}
 }
+
+.woocommerce-marketplace__sub-header {
+	display: flex;
+
+	.woocommerce-marketplace__customize-your-store-button {
+		margin-top: 16px;
+		margin-bottom: 6px;
+		margin-left: auto;
+	}
+}
