unify the SCSS margins

--- a/plugins/woocommerce-admin/client/marketplace/components/products/products.scss
+++ b/plugins/woocommerce-admin/client/marketplace/components/products/products.scss
@@ -12,8 +12,6 @@
 	display: flex;
 
 	.woocommerce-marketplace__customize-your-store-button {
-		margin-top: 16px;
-		margin-bottom: 6px;
-		margin-left: auto;
+		margin: 16px 0 6px auto;
 	}
 }
