"star" font phasing out The font family 'star' was replaced in all files. However, it continues to remain physically in the repo but not in the style files

--- a/plugins/woocommerce/client/legacy/css/twenty-seventeen.scss
+++ b/plugins/woocommerce/client/legacy/css/twenty-seventeen.scss
@@ -203,7 +203,7 @@ ul.products {
 	line-height: 1;
 	font-size: 1em;
 	width: 5.4em;
-	font-family: "star";
+	font-family: WooCommerce;
 
 	&::before {
 		content: "\73\73\73\73\73";
