--- a/plugins/woocommerce/client/legacy/css/twenty-twenty-three.scss
+++ b/plugins/woocommerce/client/legacy/css/twenty-twenty-three.scss
@@ -418,7 +418,7 @@
 		height: 1em;
 		line-height: 1;
 		width: 5.4rem;
-		font-family: star;
+		font-family: WooCommerce;
 		font-style: normal;
 		color: var(--wp--preset--color--contrast);
 		margin: 1rem auto 0.7rem auto;
