--- a/plugins/woocommerce/client/legacy/css/twenty-twenty-two.scss
+++ b/plugins/woocommerce/client/legacy/css/twenty-twenty-two.scss
@@ -413,7 +413,7 @@ $tt2-gray: #f7f7f7;
 		height: 1em;
 		line-height: 1;
 		width: 5.4rem;
-		font-family: star;
+		font-family: WooCommerce;
 		color: var(--wp--preset--color--secondary);
 		margin: 1rem auto 0.7rem auto;
 
