Add the 'Browse the WordPress.org theme directory to discover more' link.

--- a/plugins/woocommerce-admin/client/marketplace/components/product-list-content/product-list-content.scss
+++ b/plugins/woocommerce-admin/client/marketplace/components/product-list-content/product-list-content.scss
@@ -23,6 +23,14 @@
 	.woocommerce-customize-store-banner-content {
 		margin-top: 63px;
 	}
+
+	&__browse-wp-theme-directory {
+		margin-top: 24px;
+
+		a {
+			text-decoration: none;
+		}
+	}
 }
 
 @media screen and (min-width: $breakpoint-medium) {
