Update activate Woo Update Manager modal buttons.

--- a/plugins/woocommerce-admin/client/marketplace/components/woo-update-manager-plugin/woo-update-manager-plugin.scss
+++ b/plugins/woocommerce-admin/client/marketplace/components/woo-update-manager-plugin/woo-update-manager-plugin.scss
@@ -56,3 +56,12 @@
 		margin-bottom: 0px;
 	}
 }
+
+.woocommerce-marketplace__header-account-modal {
+	.components-button {
+		&.is-link {
+			text-decoration: none;
+			padding: 6px 12px;
+		}
+	}
+}
